make links target blank and remove links from images

--- a/repo/depictions/com.cj81499.cjGlyphs/index.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+    <title>cjGlyphs</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>cjGlyphs</title>
+    <base target="_blank">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/css/styles.css">
@@ -93,9 +95,9 @@
         <div class="card-content"><div class="screenshot-container">
     <div class="screenshots">
         <div class="screenshot">
-    <a class="screenshot-img-link" href="./screenshots/1.png">
-        <img class="screenshot-img" src="./screenshots/1.png">
-    </a>
+    <!-- <a class="screenshot-img-link" href="./screenshots/1.png"> -->
+    <img class="screenshot-img" src="./screenshots/1.png">
+    <!-- </a> -->
     <div class="screenshot-label">
         <p>Personal Setup</p>
 <p><a href="/contact">cj81499</a></p>
@@ -103,9 +105,9 @@
     </div>
 </div>
 <div class="screenshot">
-    <a class="screenshot-img-link" href="./screenshots/2.png">
-        <img class="screenshot-img" src="./screenshots/2.png">
-    </a>
+    <!-- <a class="screenshot-img-link" href="./screenshots/2.png"> -->
+    <img class="screenshot-img" src="./screenshots/2.png">
+    <!-- </a> -->
     <div class="screenshot-label">
         <p><a href="https://www.reddit.com/r/iOSthemes/comments/3yoc5m/setup_visionary_nsfw/">Visionary Setup [NSFW]</a></p>
 <p><a href="https://www.reddit.com/user/TruthandLogic">TruthandLogic</a></p>
