--- a/repo/depictions/com.tokems.Glyphs/index.html
+++ b/repo/depictions/com.tokems.Glyphs/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+    <title>Glyphs</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Glyphs</title>
+    <base target="_blank">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/css/styles.css">
@@ -88,9 +90,9 @@
         <div class="card-content"><div class="screenshot-container">
     <div class="screenshots">
         <div class="screenshot">
-    <a class="screenshot-img-link" href="./screenshots/1.png">
-        <img class="screenshot-img" src="./screenshots/1.png">
-    </a>
+    <!-- <a class="screenshot-img-link" href="./screenshots/1.png"> -->
+    <img class="screenshot-img" src="./screenshots/1.png">
+    <!-- </a> -->
     <div class="screenshot-label">
         <p>Personal Setup</p>
 <p><a href="/contact.html">cj81499</a></p>
