--- a/repo/index.html
+++ b/repo/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+    <title>Repo</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Repo</title>
+    <base target="_blank">
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/assets/css/styles.css">
